sandbox/output
Anagrams.java:23: error: <identifier> expected
    private String dropCharacter(String s, index) {
                                                ^
1 error
